composerのautoloaderにunittestを追加

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "autoload": {
         "psr-4": {
-            "BlackJack\\": "src/"
+            "BlackJack\\": "src/",
+            "UnitTest\\": "tests/"
         }
     }
 }
