--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,17 @@
     ],
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
             "BlackJack\\": "src/",
             "UnitTest\\": "tests/"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "5.6.36"
         }
     }
 }
